--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "antd": "^5.16.1",
+    "highcharts": "^11.4.3",
+    "highcharts-react-official": "^3.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.1.0",
